test/type-error-5.err.expect
test/type-error-5.ktn:5:1: error: cannot solve scalar type constraint Int (output of bar) = [t1 (type var a of myAddVector)] (output of myAddVector)
test/type-error-5.ktn:3:17: note: [t1 (type var a of myAddVector)] (output of myAddVector) is from here
test/type-error-5.ktn:5:9: note: Int (output of bar) is from here
